Use Java 8 for Android compatibility